# Mobile-Robots-2026-1

./: .gitignore  LICENSE  README.md  Setup.sh  githubkey  githubkey.pub
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/config_files/share/config_files/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/config_files/share/config_files/navigation/: mapper_params.yaml  simple_house.pgm  simple_house.yaml
install/config_files/share/config_files/rviz/: simple_house.rviz
install/gazebo_envs/share/gazebo_envs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gazebo_envs/share/gazebo_envs/launch/: house_simul.launch.py
install/justina_description/share/justina_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/justina_description/share/justina_description/urdf/: justina.xacro
install/justina_gui/share/justina_gui/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simple_move/lib/simple_move/: path_follower  ros_basics
install/simple_move/share/simple_move/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uf_ros_lib/share/uf_ros_lib/: package.sh
install/xarm_api/include/xarm_api/: xarm_driver.h
install/xarm_api/lib/xarm_api/: test_xarm_ros_client  test_xarm_velo_move  xarm_driver_node
install/xarm_api/share/xarm_api/: local_setup.sh  package.sh
install/xarm_controller/share/xarm_controller/: local_setup.sh  package.sh
install/xarm_description/share/xarm_description/: local_setup.sh  package.sh
install/xarm_msgs/share/xarm_msgs/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/xarm_sdk/share/xarm_sdk/: local_setup.sh  package.sh
log/: latest_build
ros2_ws/: .gitignore
ros2_ws/src/config_files/: CMakeLists.txt
ros2_ws/src/hardware/gazebo_envs/: CMakeLists.txt
ros2_ws/src/hardware/gazebo_envs/config/: gz_bridge.yaml  simple_house.rviz
ros2_ws/src/hardware/gazebo_envs/launch/: house_simul.launch.py
ros2_ws/src/hardware/gazebo_envs/worlds/: appartment.world  house.world  simple_house.world
ros2_ws/src/hardware/justina_description/: CMakeLists.txt
ros2_ws/src/hardware/xarm_ros2/: ReadMe.md  ReadMe_cn.md
ros2_ws/src/hri/justina_gui/: CMakeLists.txt  package.xml
ros2_ws/src/hri/justina_gui/src/: mainwindow.cpp  rclcomm.cpp
ros2_ws/src/hri/justina_gui/ui/: mainwindow.ui
ros2_ws/src/justina_gui/: CMakeLists.txt
ros2_ws/src/justina_gui/include/: mainwindow.h  rclcomm.h
ros2_ws/src/justina_gui/src/: justina_gui_node.cpp  mainwindow.cpp  rclcomm.cpp
ros2_ws/src/justina_gui/ui/: mainwindow.ui
ros2_ws/src/navigation/simple_move/: setup.cfg  setup.py
(+20 files in other folders)
